# market-making-simulation

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: model_caveats.md  project_report.md
outputs/: sample_path.csv  sweep_results.csv
src/market_making_simulation/: __init__.py  cli.py  experiments.py  fair_value.py  market_maker.py  metrics.py  order_book.py  order_flow.py  plotting.py  simulation.py  simulator.py
tests/: test_market_making_project.py  test_simulation.py  test_smoke.py
