[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-making-simulation"
version = "0.1.0"
description = "A Python simulation of stochastic market making with inventory and PnL attribution."
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
